src/test/ui/error-codes/E0040.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/E0040.rs:23:7
   |
LL |     x.drop();
   |       ^^^^ explicit destructor calls not allowed

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0040"
